# machine-learning-on-graphs

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  pipetest  pyproject.toml  setup.py  test_bindings.py
include/: AdjacencyArrayEdges.hpp  AttributedDeepwalk.hpp  BasicEdges.hpp  Edge.hpp  EmbeddingStrategy.hpp  Graph.hpp  IComplexEdges.hpp  IEdge.hpp  IEdges.hpp  IGraph.hpp  INode.hpp  IStrategies.hpp  KNN.hpp  Knn.hpp  Node.hpp  Strategies.hpp  StrategyRunner.hpp  Topo2Vec.hpp
include/interfaces/: IEdges.hpp  IStrategies.hpp
input/: twitch_features.txt
input/amazon_computer/: amazon_edges.txt  amazon_features.txt
input/amazon_fraud/: amazon_fraud_edges.txt  amazon_fraud_features.txt
input/cora/: corafull_edges.txt  corafull_features.txt
input/cornell/: cornell_edges.txt  cornell_features.txt  cornell_mcar_0.2.txt  cornell_mcar_0.5.txt  cornell_mcar_0.8.txt  cornell_mnar.txt  (+1 more)
scripts/: create_results.py  run_strategies_for_eval.py  test_bindings.py  twitch_execution.py
semProject/: __init__.py
semproject/: __init__.py
src/: AdjacencyArrayEdges.cpp  AttributedDeepwalk.cpp  BasicEdges.cpp  Edge.tpp  Graph.cpp  Graph.tpp  KNN.cpp  KNN.tpp  Knn.cpp  Knn.tpp  Node.cpp  Node.tpp  SparseMatrixEdges.cpp  StrategyRunner.cpp  Topo2Vec.cpp  bindings.cpp  main.cpp  test_bindings.py
tests/: AdjacencyArrayEdgesTest.cpp  AdjacencyArrayTest.cpp  AttributedDeepwalkTest.cpp  BasicEdgesTest.cpp  EmbeddingStrategyTest.cpp  GraphTest.cpp  KNNTest.cpp  KnnTest.cpp  NodeTest.cpp  Nodetest.cpp  Topo2VecTest.cpp  main.cpp
tests/cpp_tests/: KNNTest.cpp  (+3 more)
(+12 files in other folders)
